multiselect focus fix + contrast fix

--- a/src/@koop-components/form-components/multi-select/_multi-select.scss
+++ b/src/@koop-components/form-components/multi-select/_multi-select.scss
@@ -101,7 +101,7 @@
   display: block;
   padding: .2em .5em;
   margin: 0;
-	color: #999; //not in the color palette
+	color: $darkerGrey; //not in the color palette
 }
 
 .multiselect--singlemode {
